WeeChat - Wee Enhanced Environment for Chat
===========================================

ChangeLog - 2006-04-21

Version 0.1.9 (under dev!):
   * command /clear [-all] now clears hotlist
   * fixed crash after /upgrade if a line in history is empty
   * fixed many crashes with DCC chat
   * added new option to customize input prompt
   * added nick modes
   * fixed commands 332, 333 (/topic now ok when channel is not opened)
   * removed color encoding and charset conversion for commands (only
     allowed in text sent to channel/private)
   * added hostnames associeted to nicks (available for /ban completion)
   * added "+p" mode for channels, fixed mode display in status bar
   * added nick alignment options
   * fixed /names command: now displays result when not on a channel
   * fixed refresh bug (too many refresh) when terminal is resized
   * fixed nicklist display bugs when on top or bottom of chat window
   * added keyboard handler to plugin API
   * improved script plugin loader
   * added hostname/IP option for connection to server
   * fixed --disable-plugins option in configure script
   * added /setp command (set plugin options)
   * fixed high CPU usage when running under a screen that has been killed
   * aliases are executed before WeeChat/IRC commands, /builtin command added
   * added /cycle command, /part command does close buffer any more (use
     /buffer close (or alias /close) to part and close buffer

Version 0.1.8 (2006-03-18):
   * improved Ruby plugin
   * fixed /set command when internal server name contains one or many dots
   * fixed get_info plugin API function when no server at all is opened
   * fixed display bug when top of buffer is displayed and first line is
     removed (according to "history_max_lines" setting)
   * fixed /mode command output
   * improved alias completion (now uses target command for completion)
   * fixed completion problem in private with nicks
   * added missing IRC command (487)